--- a/assets/css/content/advertisementPrice.css
+++ b/assets/css/content/advertisementPrice.css
@@ -112,6 +112,7 @@
     width: 80px;
     height: 80px;
     background-color: rgba(39, 39, 42, 0.7);
+    cursor: pointer;
 }
 
 .content__advertisement-price--slider-video__play-btn img{
@@ -125,6 +126,7 @@
     width: 28px;
     height: 28px;
     background-color: rgba(39, 39, 42, 0.7);
+    cursor: pointer;
 }
 
 .content__advertisement-price--slider-video__sound-btn img {
