--- a/assets/css/content/content.css
+++ b/assets/css/content/content.css
@@ -1,3 +1,8 @@
 .content{
     background-color: var(--content-background-color);
 }
+
+.content__container{
+    margin: 15px 0;
+    border-radius: 4px;
+}
