--- a/assets/css/content/authenticBrand.css
+++ b/assets/css/content/authenticBrand.css
@@ -4,6 +4,7 @@
     padding-bottom: 13px;
 }
 
+/* Header */
 .content__authentic-brand--header{
     height: 60px;
     padding: 16px;
@@ -30,6 +31,7 @@
     line-height: 24px;
 }
 
+/* Slider */
 .content__authentic-brand--slider{
     height: 222px;
     margin-bottom: 12px;
@@ -99,3 +101,76 @@
     background-color: rgb(26, 148, 255);
 }
 
+/* Product */
+.content__authentic-brand--product::before{
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 120px;
+    z-index: 1;
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(255, 255, 255));
+    left: 0px;
+    transition: width 0.05s ease-in 0s;
+    pointer-events: none;
+}
+
+.content__authentic-brand--product::after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 120px;
+    z-index: 1;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255));
+    right: 0px;
+    transition: width 0.05s ease-in 0s;
+    pointer-events: none;
+}
+
+
+.content__authentic-brand--product__list{
+    min-height: 287px;
+    margin: 0 9px;
+}
+
+.content__authentic-brand--product__list:hover .content__authentic-brand--product__btn{
+    opacity: 1;
+}
+
+.content__authentic-brand--product__item{
+    /* width: 204px; */
+    height: auto;
+    outline: none;
+}
+
+.content__authentic-brand--product__link{
+    width: 100%;
+    height: 100%;
+}
+
+.content__authentic-brand--product__img{
+    width: 190px;
+    height: 284px;
+    margin: 0 auto;
+    border: 1px solid rgb(238, 238, 238);
+    border-radius: 8px;
+}
+
+.content__authentic-brand--product__title{
+    margin-bottom: 4px;
+    color: rgb(26, 148, 255);
+}
+
+.content__authentic-brand--product__btn{
+    width: 28px;
+    height: 28px;
+    border: 1px solid rgb(204, 204, 204);
+    z-index: 100;
+    opacity: 0.3;
+    cursor: pointer;
+}
+
+.content__authentic-brand--product__icon{
+    font-size: 18px;
+}
