--- a/assets/css/content/suggestionsToday.css
+++ b/assets/css/content/suggestionsToday.css
@@ -4,6 +4,7 @@
     background-color: var(--content-background-color);
 }
 
+/* Header */
 .content__suggestion-today--header{
     background: var(--content-background-color);
     border-radius: 4px 4px 0px 0px;
@@ -60,4 +61,118 @@
     display: -webkit-box;
     word-break: break-word;
     color: rgb(120, 120, 120);
+}
+
+/* Product */
+.content__suggestion-today--product{
+    background-color: white;
+    border-top: 1px solid rgb(245, 245, 250);
+}
+
+.content__suggestion-today--product__item{
+    
+}
+
+.content__suggestion-today--product__link{
+    padding: 12px;
+    margin-bottom: 32px;
+    width: 100%;
+    height: 100%;
+    color: rgb(56, 56, 61);
+}
+
+.content__suggestion-today--product__link:hover{
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 20px;
+    z-index: 1;
+}
+
+.content__suggestion-today--product__link:hover{
+    color: rgb(56, 56, 61);
+}
+
+.content__suggestion-today--product__img-wrapper{
+    margin-bottom: 8px;
+}
+
+.content__suggestion-today--product__img-freeship{
+    width: 136px;
+    height: 24px;
+}
+
+.content__suggestion-today--product__name{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+
+.content__suggestion-today--product__advertisement{
+    background: rgb(242, 242, 242);
+    line-height: 12px;
+    display: inline-block;
+    padding: 0px 4px;
+    font-size: 9px;
+    border-radius: 2px;
+}
+
+.content__suggestion-today--product__title{
+    font-size: 13px;
+    margin: 0px 0px 4px;
+    line-height: 20px;
+    word-break: break-word;
+    font-weight: initial;
+}
+
+.content__suggestion-today--product__separate{
+    width: 1px;
+    height: 9px;
+    margin-left: 4px;
+    background-color: rgb(199, 199, 199);
+}
+
+.content__suggestion-today--product__sold{
+    padding-left: 6px;
+    font-size: 11px;
+    line-height: normal;
+    color: rgb(120, 120, 120);
+}
+
+.content__suggestion-today--product__price-and-discount{
+    margin-top: 4px;
+}
+
+.content__suggestion-today--product__price{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: rgb(255, 66 ,78);
+}
+
+.content__suggestion-today--product__discount{
+    padding: 0px 2px;
+    line-height: 14px;
+    font-size: 12px;
+    font-weight: 400;
+    margin-left: 8px;
+    border: 1px solid rgb(255, 66, 78);
+    border-radius: 2px;
+    background-color: rgb(255, 240, 241);
+    color: rgb(255, 66, 78);
+}
+
+.content__suggestion-today__seermore-btn{
+    width: 240px;
+    margin: 12px auto;
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: 1px solid rgb(13, 92, 182);
+    font-size: 13px;
+    font-weight: 500;
+    color:  rgb(13, 92, 182);
+    background-color: white;
+}
+
+.content__suggestion-today__seermore-btn:hover{
+    color: white;
+    background-color:rgb(13, 92, 182);
 }
