build ui footer

--- a/assets/css/content/suggestionsToday.css
+++ b/assets/css/content/suggestionsToday.css
@@ -161,6 +161,7 @@
 }
 
 .content__suggestion-today__seermore-btn{
+    display: block;
     width: 240px;
     margin: 12px auto;
     padding: 8px 12px;
