--- a/assets/css/content/categories.css
+++ b/assets/css/content/categories.css
@@ -1,15 +1,16 @@
 /* Category */
 .content__categories-wrapper {
     background-color: white;
+    height: 44px;
 }
 .content__categories {
     width: 1240px;
-    height: 44px;
+    height: 100%;
     padding: 15px 0;
-    margin: 0 auto;
-    overflow: hidden;
+    margin: 0px auto;
     white-space: nowrap;
     position: relative;
+    line-height: 1.15;
 }
 .content__categories-icon--wrapper {
     width: 8px;
@@ -38,7 +39,6 @@
     height: 100%;
 }
 .content__categories-list {
-    overflow: hidden;
     font-size: 0px; /*Remove space between inline-block elements*/
 }
 .content__categories-item {
