--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 :root {
     --primary-color: rgb(26, 148, 255);
     --button-color: rgb(13, 92, 182);
@@ -15,7 +15,7 @@
 }
 
 html {
-    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     line-height: 1.15;
     text-size-adjust: 100%;
